exports[`test should add an item based on the value in the state 1`] = `
<div>
  <ul>
    <li>
      <TodoItem
        checked={true}
        onClick={[Function]}
        text="Get to Las Palmas 🌴" />
    </li>
    <li>
      <TodoItem
        checked={false}
        onClick={[Function]}
        text="Learn the basics of React 👩‍🎓" />
    </li>
    <li>
      <TodoItem
        checked={false}
        onClick={[Function]}
        text="Go surfing 🏄" />
    </li>
    <li>
      <TodoItem
        checked={false}
        onClick={[Function]}
        text="Test item" />
    </li>
  </ul>
  <form
    onSubmit={[Function]}>
    <TodoInput
      onChange={[Function]}
      value="" />
  </form>
</div>
`;

exports[`test should change the value of the TodoInput from the TodoInput 1`] = `
<div>
  <ul>
    <li>
      <TodoItem
        checked={true}
        onClick={[Function]}
        text="Get to Las Palmas 🌴" />
    </li>
    <li>
      <TodoItem
        checked={false}
        onClick={[Function]}
        text="Learn the basics of React 👩‍🎓" />
    </li>
    <li>
      <TodoItem
        checked={false}
        onClick={[Function]}
        text="Go surfing 🏄" />
    </li>
  </ul>
  <form
    onSubmit={[Function]}>
    <TodoInput
      onChange={[Function]}
      value="Changed input" />
  </form>
</div>
`;

exports[`test should render the passed-in items 1`] = `
<div>
  <ul>
    <li>
      <TodoItem
        checked={true}
        onClick={[Function]}
        text="Get to Las Palmas 🌴" />
    </li>
    <li>
      <TodoItem
        checked={false}
        onClick={[Function]}
        text="Learn the basics of React 👩‍🎓" />
    </li>
    <li>
      <TodoItem
        checked={false}
        onClick={[Function]}
        text="Go surfing 🏄" />
    </li>
  </ul>
  <form
    onSubmit={[Function]}>
    <TodoInput
      onChange={[Function]}
      value="" />
  </form>
</div>
`;

exports[`test should set the value of the TodoInput from the state 1`] = `
<div>
  <ul>
    <li>
      <TodoItem
        checked={true}
        onClick={[Function]}
        text="Get to Las Palmas 🌴" />
    </li>
    <li>
      <TodoItem
        checked={false}
        onClick={[Function]}
        text="Learn the basics of React 👩‍🎓" />
    </li>
    <li>
      <TodoItem
        checked={false}
        onClick={[Function]}
        text="Go surfing 🏄" />
    </li>
  </ul>
  <form
    onSubmit={[Function]}>
    <TodoInput
      onChange={[Function]}
      value="Test item" />
  </form>
</div>
`;
